console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: console
  name: console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: console
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/redpanda_network: "true"
        io.kompose.service: console
    spec:
      containers:
      - args:
        - -c
        - echo "$CONSOLE_CONFIG_FILE" > /tmp/config.yml; /app/console
        command:
        - /bin/sh
        image: docker.redpanda.com/redpandadata/console:v2.4.3
        imagePullPolicy: ""
        name: redpanda-console
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
