redpanda-0-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redpanda-0
  name: redpanda-0
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redpanda-0
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/redpanda_network: "true"
        io.kompose.service: redpanda-0
    spec:
      containers:
      - args:
        - redpanda
        - start
        - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
        - --advertise-kafka-addr internal://redpanda-0:9092,external://localhost:19092
        - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
        - --advertise-pandaproxy-addr internal://redpanda-0:8082,external://localhost:18082
        - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
        - --rpc-addr redpanda-0:33145
        - --advertise-rpc-addr redpanda-0:33145
        - --smp 1
        - --memory 1G
        - --mode dev-container
        - --default-log-level=debug
        image: docker.redpanda.com/redpandadata/redpanda:v23.3.6
        imagePullPolicy: ""
        name: redpanda-0
        ports:
        - containerPort: 18081
        - containerPort: 18082
        - containerPort: 19092
        - containerPort: 9644
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/redpanda/data
          name: redpanda-0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: redpanda-0
        persistentVolumeClaim:
          claimName: redpanda-0
status: {}
