redpanda-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redpanda-1
  name: redpanda-1
spec:
  ports:
  - name: "28081"
    port: 28081
    targetPort: 28081
  - name: "28082"
    port: 28082
    targetPort: 28082
  - name: "29092"
    port: 29092
    targetPort: 29092
  - name: "29644"
    port: 29644
    targetPort: 9644
  selector:
    io.kompose.service: redpanda-1
status:
  loadBalancer: {}
