redpanda-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redpanda-2
  name: redpanda-2
spec:
  ports:
  - name: "38081"
    port: 38081
    targetPort: 38081
  - name: "38082"
    port: 38082
    targetPort: 38082
  - name: "39092"
    port: 39092
    targetPort: 39092
  - name: "39644"
    port: 39644
    targetPort: 9644
  selector:
    io.kompose.service: redpanda-2
status:
  loadBalancer: {}
